<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/profile"
        android:icon="@mipmap/profile"
        android:title="@string/prof" />
    <item
        android:id="@+id/close_app"
        android:icon="@mipmap/exit"
        android:title="@string/close_app" />

    <item android:title="@string/communicate">
    <!--<group android:checkableBehavior="single">-->
        <menu>
            <item
            android:id="@+id/dashbrd"
            android:icon="@mipmap/dashboard"
            android:title="@string/dashboard" />
             <item
            android:id="@+id/sales"
            android:icon="@mipmap/sales"
            android:title="@string/sales" />
             <item
            android:id="@+id/contacts"
            android:icon="@mipmap/contacts"
            android:title="@string/contacts" />
        </menu>
   <!-- </group>-->
</item>
    <item android:title="@string/tools">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
