<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAppBackground">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/_new_checkbox_note_creation_nested_scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_toolbar">

        <GridLayout
            android:id="@+id/new_checkbox_note_creation_grid_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/bottom_toolbar"
            android:background="@color/colorNoteDefault"
            android:columnCount="3"
            android:orientation="vertical">

            <EditText
                android:id="@+id/new_checkbox_note_creation_title_edit_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_columnSpan="3"
                android:background="@android:color/transparent"
                android:focusedByDefault="false"
                android:gravity="top|left"
                android:hint="@string/title_placeholder"
                android:inputType="textCapSentences"
                android:paddingStart="12dp"
                android:paddingTop="8dp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

            <CheckBox
                android:id="@+id/new_checkbox_note_creation_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="1"
                android:paddingStart="12dp"
                android:paddingTop="8dp" />

            <EditText
                android:id="@+id/new_checkbox_note_creation_text_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="1"
                android:focusable="true"
                android:focusedByDefault="true"
                android:gravity="center"
                android:paddingStart="12dp"
                android:paddingTop="8dp"
                android:background="@android:color/transparent"
                tools:ignore="RtlSymmetry"/>

            <ImageView
                android:id="@+id/image_button_dell_check_box"
                android:layout_column="2"
                android:layout_gravity="center"
                android:layout_row="1"
                android:clickable="true"
                app:srcCompat="@drawable/checkbox_dell" />

            <ImageView
                android:id="@+id/imageView_add_check_box"
                android:layout_column="0"
                android:layout_row="2"
                android:clickable="true"
                android:paddingStart="12dp"
                android:paddingTop="8dp"
                app:srcCompat="@drawable/checkbox_add" />

            <TextView
                android:id="@+id/text_view__add_check_box"
                android:layout_width="match_parent"
                android:layout_height="41dp"
                android:layout_column="1"
                android:layout_columnSpan="2"
                android:layout_row="2"
                android:gravity=""
                android:paddingStart="12dp"
                android:paddingTop="8dp"
                android:text="@string/text_view__add_check_box" />


        </GridLayout>
    </android.support.v4.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/note_actions_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottom_toolbar"
        android:orientation="vertical">

        <HorizontalScrollView
            android:id="@+id/color_scroll_view"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:fillViewport="true"
            android:scrollbars="none">

            <LinearLayout
                android:id="@+id/color_picker_layout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingBottom="8dp"
                android:paddingTop="8dp">

                <RadioGroup
                    android:id="@+id/color_picker_radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    tools:ignore="UselessParent">

                    <RadioButton
                        android:id="@+id/default_color_checkbox"
                        android:layout_width="35dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="12dp"
                        android:layout_marginStart="10dp"
                        android:background="@drawable/checkbox_default"
                        android:button="@null"
                        android:checked="true" />

                    <RadioButton
                        android:id="@+id/red_color_checkbox"
                        android:layout_width="35dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="12dp"
                        android:background="@drawable/checkbox_red"
                        android:button="@null"
                        android:checked="false" />

                    <RadioButton
                        android:id="@+id/orange_color_checkbox"
                        android:layout_width="35dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="12dp"
                        android:background="@drawable/checkbox_orange"
                        android:button="@null"
                        android:checked="false" />

                    <RadioButton
                        android:id="@+id/yellow_color_checkbox"
                        android:layout_width="35dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="12dp"
                        android:background="@drawable/checkbox_yellow"
                        android:button="@null"
                        android:checked="false" />

                    <RadioButton
                        android:id="@+id/green_color_checkbox"
                        android:layout_width="35dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="12dp"
                        android:background="@drawable/checkbox_green"
                        android:button="@null"
                        android:checked="false" />

                    <RadioButton
                        android:id="@+id/cyan_color_checkbox"
                        android:layout_width="35dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="12dp"
                        android:background="@drawable/checkbox_cyan"
                        android:button="@null"
                        android:checked="false" />

                    <RadioButton
                        android:id="@+id/light_blue_color_checkbox"
                        android:layout_width="35dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="12dp"
                        android:background="@drawable/checkbox_light_blue"
                        android:button="@null"
                        android:checked="false" />

                    <RadioButton
                        android:id="@+id/dark_blue_color_checkbox"
                        android:layout_width="35dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="12dp"
                        android:background="@drawable/checkbox_dark_blue"
                        android:button="@null"
                        android:checked="false" />

                    <RadioButton
                        android:id="@+id/purple_color_checkbox"
                        android:layout_width="35dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="12dp"
                        android:background="@drawable/checkbox_purple"
                        android:button="@null"
                        android:checked="false" />

                    <RadioButton
                        android:id="@+id/pink_color_checkbox"
                        android:layout_width="35dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="12dp"
                        android:background="@drawable/checkbox_pink"
                        android:button="@null"
                        android:checked="false" />

                    <RadioButton
                        android:id="@+id/brown_color_checkbox"
                        android:layout_width="35dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="12dp"
                        android:background="@drawable/checkbox_brown"
                        android:button="@null"
                        android:checked="false" />

                    <RadioButton
                        android:id="@+id/grey_color_checkbox"
                        android:layout_width="35dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/checkbox_grey"
                        android:button="@null"
                        android:checked="false" />

                </RadioGroup>

            </LinearLayout>

        </HorizontalScrollView>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@id/bottom_toolbar"
        android:background="#60545454" />

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/bottom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="#60545454"
        android:gravity="center"
        android:stretchColumns="1">

        <TableRow
            android:id="@+id/firstRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="50dp"
            tools:ignore="UselessParent">

            <ImageButton
                android:id="@+id/note_types_button"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:background="?android:attr/selectableItemBackground"
                android:contentDescription="@string/note_types"
                android:src="@drawable/ic_icon_plus" />

            <TextView
                android:id="@+id/last_modification_date"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:text="@string/last_modification_date"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorHint" />

            <ImageButton
                android:id="@+id/note_actions_button"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:background="?android:attr/selectableItemBackground"
                android:contentDescription="@string/note_actions"
                android:src="@drawable/ic_icon_three_dot" />

        </TableRow>

    </TableLayout>

</RelativeLayout>
